Fix grid so it works on mobile

--- a/src/assets/pages/_homepage.scss
+++ b/src/assets/pages/_homepage.scss
@@ -1,3 +1,9 @@
 body {
 	margin: 0;
 }
+@media screen and (min-width: 1024px) {
+	body {
+		overflow-y: hidden;
+		overflow-x: visible;
+	}
+}
