--- a/src/assets/partials/_tile.scss
+++ b/src/assets/partials/_tile.scss
@@ -30,5 +30,8 @@
 			left: 12%;
 			right: 12%;
 		}
+		@media screen and (min-width: 1024px) {
+			font-size: 5vh;
+		}
 	}
 }
